Texture Paint, New Single image, Segmentation fault: 11 #80705

Closed
opened 2020-09-11 18:15:52 +02:00 by dupoxy · 6 comments
Contributor

System Information
Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-11 15:12, hash: 8d45f23466
Worked: (newest Daily Builds of Blender that worked as expected) 2.91.0 Alpha, branch: master, commit date: 2020-09-10 21:55, hash: 66078594d1
Caused by d6525e8d13

Short description of error
Crash making a new Single image in Texture Paint.
Exact steps for others to reproduce the error
go in texture paint workspace
and in the Textures Slots Draw Settings

  • change Mode to Single Image
  • click new
  • click OK
    blender crash

video of steps:
2020-09-11 17-55-37.mp4

blender.crash.txt:

# Blender 2.91.0, Commit date: 2020-09-11 15:12, Hash 8d45f2346603
bpy.ops.paint.texture_paint_toggle()  # Operator
bpy.context.scene.tool_settings.image_paint.mode = 'IMAGE'  # Property

# backtrace
0   Blender                             0x0000000107824117 BLI_system_backtrace + 55
1   Blender                             0x00000001001492d8 sig_handle_crash + 392
2   libsystem_platform.dylib            0x00007fff6786cf5a _sigtramp + 26
3   libsystem_malloc.dylib              0x00007fff677083c6 tiny_malloc_from_free_list + 431
4   Blender                             0x0000000100605c9d workbench_image_setup_ex + 285
5   Blender                             0x00000001006045e4 workbench_cache_populate + 740
6   Blender                             0x00000001005d4861 drw_engines_cache_populate + 161
7   Blender                             0x00000001005d3386 DRW_draw_render_loop_ex + 1110
8   Blender                             0x0000000100cd2ba8 view3d_main_region_draw + 136
9   Blender                             0x00000001008a558a ED_region_do_draw + 346
10  Blender                             0x000000010049a730 wm_draw_update + 1968
11  Blender                             0x0000000100498260 WM_main + 48
12  Blender                             0x00000001001459f2 main + 914
13  libdyld.dylib                       0x00007fff6755e015 start + 1

# Python backtrace

**System Information** Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-11 15:12, hash: `8d45f23466` Worked: (newest Daily Builds of Blender that worked as expected) 2.91.0 Alpha, branch: master, commit date: 2020-09-10 21:55, hash: `66078594d1` Caused by d6525e8d13 **Short description of error** Crash making a new Single image in Texture Paint. **Exact steps for others to reproduce the error** go in texture paint workspace and in the Textures Slots Draw Settings - change Mode to Single Image - click new - click OK blender crash **video of steps:** [2020-09-11 17-55-37.mp4](https://archive.blender.org/developer/F8866134/2020-09-11_17-55-37.mp4) **blender.crash.txt:** ``` # Blender 2.91.0, Commit date: 2020-09-11 15:12, Hash 8d45f2346603 bpy.ops.paint.texture_paint_toggle() # Operator bpy.context.scene.tool_settings.image_paint.mode = 'IMAGE' # Property # backtrace 0 Blender 0x0000000107824117 BLI_system_backtrace + 55 1 Blender 0x00000001001492d8 sig_handle_crash + 392 2 libsystem_platform.dylib 0x00007fff6786cf5a _sigtramp + 26 3 libsystem_malloc.dylib 0x00007fff677083c6 tiny_malloc_from_free_list + 431 4 Blender 0x0000000100605c9d workbench_image_setup_ex + 285 5 Blender 0x00000001006045e4 workbench_cache_populate + 740 6 Blender 0x00000001005d4861 drw_engines_cache_populate + 161 7 Blender 0x00000001005d3386 DRW_draw_render_loop_ex + 1110 8 Blender 0x0000000100cd2ba8 view3d_main_region_draw + 136 9 Blender 0x00000001008a558a ED_region_do_draw + 346 10 Blender 0x000000010049a730 wm_draw_update + 1968 11 Blender 0x0000000100498260 WM_main + 48 12 Blender 0x00000001001459f2 main + 914 13 libdyld.dylib 0x00007fff6755e015 start + 1 # Python backtrace ```
Author
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by d6525e8d13

CC @Jeroen-Bakker

Caused by d6525e8d13 CC @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-09-11 19:46:06 +02:00

This issue was referenced by 28c2032579

This issue was referenced by 28c203257984ecee1c2517a0985b6c073403743d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80705
No description provided.