Fix T80705: Single Image Texture Painting Crash

Regression introduced by {D8234}; GPU textures can be requested without
an image user.